# memcached-client

./: Cargo.toml  README.md  docker-compose.yml
src/: lib.rs
src/client/: codec.rs  mod.rs  proto.rs
src/protocol/: mod.rs  request.rs  response.rs
