[package]
name = "memcached-client"
version = "0.1.0"
authors = ["Vasiliy Yorkin <vasiliy.yorkin@gmail.com>"]

[dependencies]
bytes = "*"
nom = "*"
futures = "*"
tokio-core = "*"
tokio-io = "*"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = "*"

[dev-dependencies]
spectral = "*"